--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,34 +50,39 @@ h3 {
 }
 
 /* HTML: <div class="loader"></div> */
-/* HTML: <div class="loader"></div> */
-/* HTML: <div class="loader"></div> */
 .loader {
-  width: 65px;
-  height: 117px;
-  position: relative;
+  width: 50px;
+  aspect-ratio: 1;
+  display: grid;
+  border: 4px solid #0000;
+  border-radius: 50%;
+  border-color: #ffb773 #0000;
+  animation: l16 1s infinite linear;
 }
 
-.loader:before,
-.loader:after {
+.loader::before,
+.loader::after {
   content: "";
-  position: absolute;
-  inset: 0;
-  background: #ff4D00;
-  box-shadow: 0 0 0 50px;
-  clip-path: polygon(100% 0, 23% 46%, 46% 44%, 15% 69%, 38% 67%, 0 100%, 76% 57%, 53% 58%, 88% 33%, 60% 37%);
-  ;
+  grid-area: 1/1;
+  margin: 2px;
+  border: inherit;
+  border-radius: 50%;
 }
 
-.loader:after {
-  animation: l8 1s infinite;
-  transform: perspective(300px) translateZ(0px)
+.loader::before {
+  border-color: #7c2d12 #0000;
+  animation: inherit;
+  animation-duration: .5s;
+  animation-direction: reverse;
 }
 
-@keyframes l8 {
-  to {
-    transform: perspective(300px) translateZ(180px);
-    opacity: 0
+.loader::after {
+  margin: 8px;
+}
+
+@keyframes l16 {
+  100% {
+    transform: rotate(1turn)
   }
 }
 
